--- a/desktop-themes/Mint/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Mint/gtk-3.0/cafe-applications.css
@@ -2,7 +2,7 @@
  * CAJA File manager *
  *********************/
 
-/* Caja places combobox */
+/* Baul places combobox */
 .baul-navigation-window .baul-side-pane button.flat {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
