--- a/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
@@ -760,8 +760,8 @@ lapiz-print-preview.vertical toolbar.horizontal button.flat.text-button {
  *********/
 
 /* broken text selection */
-.atril-window scrolledwindow.frame > widget:active,
-.atril-window scrolledwindow.frame > widget:selected {
+.lector-window scrolledwindow.frame > widget:active,
+.lector-window scrolledwindow.frame > widget:selected {
 	background-color: shade(@theme_selected_bg_color, 1.23);
 	color: @theme_selected_fg_color;
 }
@@ -822,7 +822,7 @@ cafekbd-keyboard-drawing,
    FIXME Sadly lapiz ignore doesn't show the maximised style class */
 
 window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal > scrolledwindow.frame,
-window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
+window.background.maximized.lector-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.maximized.baul-navigation-window notebook.baul-notebook scrolledwindow.frame {
