--- a/desktop-themes/BlueMint/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/BlueMint/ctk-3.0/cafe-applications.css
@@ -825,31 +825,31 @@ na-tray-applet widget box widget {
  *********/
 
 /* size of page entry */
-.atril-window .primary-toolbar toolbar toolitem box.horizontal entry {
+.lector-window .primary-toolbar toolbar toolitem box.horizontal entry {
     padding: 2px;
 }
 
-.atril-window .primary-toolbar toolbar button,
-.atril-window .primary-toolbar toolbar button.flat {
+.lector-window .primary-toolbar toolbar button,
+.lector-window .primary-toolbar toolbar button.flat {
     padding: 5px;
 }
 
-.atril-window .primary-toolbar toolbar button.combo {
+.lector-window .primary-toolbar toolbar button.combo {
     padding: 6px;
 }
 
 /* broken text selection */
-.atril-window scrolledwindow.frame > widget:selected {
+.lector-window scrolledwindow.frame > widget:selected {
 	background-color: @theme_selected_bg_color;
 	color: @theme_selected_fg_color;
 }
 
-.atril-window scrolledwindow.frame > widget:active {
+.lector-window scrolledwindow.frame > widget:active {
 	background-color: shade(@theme_unfocused_bg_color, 0.94);
 	color: @theme_fg_color;
 }
 
-/* atril and eom */
+/* lector and eom */
 EggToolbarEditor.vertical scrolledwindow {
     border-color: @borders;
     border-width: 1px;
@@ -1059,7 +1059,7 @@ cafekbd-keyboard-drawing,
    FIXME Sadly lapiz ignore doesn't show the maximised style class */
 
 window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal > scrolledwindow.frame,
-window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
+window.background.maximized.lector-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.maximized.baul-navigation-window notebook.baul-notebook scrolledwindow.frame {
