--- a/desktop-themes/BlueMint/ctk-3.0/ctk-widgets.css
+++ b/desktop-themes/BlueMint/ctk-3.0/ctk-widgets.css
@@ -253,7 +253,7 @@ toolbar .separator {
 	color: transparent;
 }
 
-/* eg. atril, evince */
+/* eg. lector, evince */
 .content-view:backdrop:not(:selected) {
     background-color: shade(@backdrop_color, 1.00);
     color: @theme_unfocused_fg_color;
