--- a/desktop-themes/ClassicOk/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicOk/gtk-3.0/cafe-applications.css
@@ -496,7 +496,7 @@ na-tray-applet {
  * Atril *
  *********/
 
-/* atril and eom */
+/* lector and eom */
 EggToolbarEditor.vertical scrolledwindow {
     background-color: shade (@theme_base_color, 1.0);
     border-color: @border_color;
@@ -506,8 +506,8 @@ EggToolbarEditor.vertical scrolledwindow {
 }
 
 /* broken text selection */
-.atril-window scrolledwindow.frame > widget:active,
-.atril-window scrolledwindow.frame > widget:selected {
+.lector-window scrolledwindow.frame > widget:active,
+.lector-window scrolledwindow.frame > widget:selected {
 	background-color: @theme_selected_bg_color;
 	color: @theme_selected_fg_color;
 }
@@ -664,7 +664,7 @@ cafekbd-keyboard-drawing,
    FIXME Sadly lapiz ignore doesn't show the maximised style class */
 
 window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal > scrolledwindow.frame,
-window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
+window.background.maximized.lector-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.maximized.baul-navigation-window notebook.baul-notebook scrolledwindow.frame {
