--- a/desktop-themes/Green-Undersea/ctk-3.0/ctk-widgets.css
+++ b/desktop-themes/Green-Undersea/ctk-3.0/ctk-widgets.css
@@ -2166,7 +2166,7 @@ toolbar combobox cellview {
     text-shadow: none;
 }
 
-/* ie. atril */
+/* ie. lector */
 .primary-toolbar toolbar combobox cellview,
 toolbar.primary-toolbar combobox cellview {
     /* color combobox read-only */
@@ -2775,7 +2775,7 @@ toolbar.primary-toolbar button:checked:disabled {
     text-shadow: none;
 }
 
-/* ie. atril */
+/* ie. lector */
 .primary-toolbar toolbar toolitem combobox .linked button.combo {
     padding: 8px 4px;
 }
