--- a/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
@@ -1234,22 +1234,22 @@ vte-terminal {
  * Atril *
  *********/
 
-.atril-window paned.horizontal notebook scrolledwindow {
+.lector-window paned.horizontal notebook scrolledwindow {
     border-style: none;
 }
 
 /* broken text selection */
-.atril-window scrolledwindow.frame > widget:selected {
+.lector-window scrolledwindow.frame > widget:selected {
 	background-color: @theme_selected_bg_color;
 	color: @theme_selected_fg_color;
 }
 
-.atril-window scrolledwindow.frame > widget:active {
+.lector-window scrolledwindow.frame > widget:active {
 	background-color: shade(@theme_light_unfocused_bg_color, 0.94);
 	color: @theme_fg_color;
 }
 
-/* atril and eom */
+/* lector and eom */
 EggToolbarEditor.vertical scrolledwindow {
     border-color: @notebook_border;
     border-width: 1px;
@@ -1467,7 +1467,7 @@ cafekbd-keyboard-drawing,
    FIXME Sadly lapiz ignore doesn't show the maximised style class */
 
 window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal > scrolledwindow.frame,
-window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
+window.background.maximized.lector-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.maximized.baul-navigation-window notebook.baul-notebook scrolledwindow.frame {
