--- a/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
@@ -756,7 +756,7 @@ lapiz-print-preview.vertical toolbar.horizontal button.flat.text-button {
 }
 
 /*********
- * Atril *
+ * Lector *
  *********/
 
 /* broken text selection */
