--- a/desktop-themes/Blue-Undersea/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Blue-Undersea/gtk-3.0/cafe-applications.css
@@ -1221,7 +1221,7 @@ vte-terminal {
 }
 
 /*********
- * Atril *
+ * Lector *
  *********/
 
 .lector-window paned.horizontal notebook scrolledwindow {
