--- a/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
@@ -1231,7 +1231,7 @@ vte-terminal {
 }
 
 /*********
- * Atril *
+ * Lector *
  *********/
 
 .lector-window paned.horizontal notebook scrolledwindow {
