Classic themes: Lector: Fix broken text selection
if context menu is shown, or if window isn't active

--- a/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicGreen/ctk-3.0/cafe-applications.css
@@ -506,8 +506,7 @@ EggToolbarEditor.vertical scrolledwindow {
 }
 
 /* broken text selection */
-.lector-window scrolledwindow.frame > widget:active,
-.lector-window scrolledwindow.frame > widget:selected {
+.lector-window evview .view {
 	background-color: @theme_selected_bg_color;
 	color: @theme_selected_fg_color;
 }
