--- a/desktop-themes/BlackCAFE/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/BlackCAFE/ctk-3.0/cafe-applications.css
@@ -359,7 +359,7 @@ GdictApplet .entry:focus {
                 inset  0px -1px shade (@theme_selected_bg_color, 1.3);
 }
 
-/* the grid left from wnckpager and wncktasklist */
+/* the grid left from vnckpager and vncktasklist */
 CafePanelAppletFrameDBus > CafePanelAppletFrameDBus {
     background-image: -ctk-scaled(url("assets/panel-grid.svg"));
     background-color: transparent;
@@ -592,7 +592,7 @@ CafePanelApplet > menubar {
 }
 
 /*WnckPager is unnamed in CTK inspector so try this*/
-PanelApplet.wnck-applet .wnck-pager {
+PanelApplet.vnck-applet .vnck-pager {
     background-image: none;
     border-color: transparent;
     background-color: transparent;
@@ -600,14 +600,14 @@ PanelApplet.wnck-applet .wnck-pager {
 }
 
 /* selected WnckPager */
-PanelApplet.wnck-applet .wnck-pager:selected {
+PanelApplet.vnck-applet .vnck-pager:selected {
     background-image: linear-gradient(to bottom,
                                       @theme_selected_bg_color,
                                       shade (@theme_selected_bg_color, 0.36));
 }
 
 /* prelight of WnckPager */
-PanelApplet.wnck-applet .wnck-pager:hover {
+PanelApplet.vnck-applet .vnck-pager:hover {
     background-image: linear-gradient(to bottom,
                                       @theme_bg_color,
                                       shade (@theme_selected_bg_color, 0.86));
