--- a/desktop-themes/Blue-Undersea/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/Blue-Undersea/ctk-3.0/cafe-applications.css
@@ -474,7 +474,7 @@ PanelSeparator {
     background-position: center;
 }
 
-/* the grid left from wnckpager and wncktasklist */
+/* the grid left from vnckpager and vncktasklist */
 CafePanelAppletFrameDBus > CafePanelAppletFrameDBus {
     background-image: -ctk-scaled(url("assets/panel-grid.svg"));
     background-color: transparent;
@@ -699,7 +699,7 @@ window.background, /* selector where outlines are writen on CtkTrayIcon */
 }
 
 /* WnckPager */
-PanelApplet.wnck-applet .wnck-pager {
+PanelApplet.vnck-applet .vnck-pager {
     background-image: none;
     border-color: transparent;
     background-color: transparent;
@@ -709,14 +709,14 @@ PanelApplet.wnck-applet .wnck-pager {
 }
 
 /* selected WnckPager */
-PanelApplet.wnck-applet .wnck-pager:selected {
+PanelApplet.vnck-applet .vnck-pager:selected {
     background-image: linear-gradient(to bottom,
                                       @theme_selected_bg_color,
                                       shade (@theme_selected_bg_color, 0.36));
 }
 
 /* hover of WnckPager */
-PanelApplet.wnck-applet .wnck-pager:hover {
+PanelApplet.vnck-applet .vnck-pager:hover {
     background-image: linear-gradient(to bottom,
                                       shade (@theme_selected_bg_color, 0.56),
                                       @theme_selected_bg_color);
