--- a/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Green-Undersea/gtk-3.0/cafe-applications.css
@@ -486,7 +486,7 @@ PanelSeparator {
     background-position: center;
 }
 
-/* the grid left from wnckpager and wncktasklist */
+/* the grid left from vnckpager and vncktasklist */
 CafePanelAppletFrameDBus > CafePanelAppletFrameDBus {
     background-image: -gtk-scaled(url("assets/panel-grid.svg"));
     background-color: transparent;
@@ -711,7 +711,7 @@ window.background, /* selector where outlines are writen on GtkTrayIcon */
 }
 
 /* WnckPager */
-PanelApplet.wnck-applet .wnck-pager {
+PanelApplet.vnck-applet .vnck-pager {
     background-image: none;
     border-color: transparent;
     background-color: transparent;
@@ -721,14 +721,14 @@ PanelApplet.wnck-applet .wnck-pager {
 }
 
 /* selected WnckPager */
-PanelApplet.wnck-applet .wnck-pager:selected {
+PanelApplet.vnck-applet .vnck-pager:selected {
     background-image: linear-gradient(to bottom,
                                       @theme_selected_bg_color,
                                       shade (@theme_selected_bg_color, 0.36));
 }
 
 /* hover of WnckPager */
-PanelApplet.wnck-applet .wnck-pager:hover {
+PanelApplet.vnck-applet .vnck-pager:hover {
     background-image: linear-gradient(to bottom,
                                       shade (@theme_selected_bg_color, 0.56),
                                       @theme_selected_bg_color);
