--- a/desktop-themes/GreenLagoon/gtk-3.0/gtk-main.css
+++ b/desktop-themes/GreenLagoon/gtk-3.0/gtk-main.css
@@ -105,7 +105,7 @@
 @define-color app_notification_c @theme_bg_color;
 @define-color app_notification_border #939493;
 
-@define-color wnckpager_bg_color #98D437;
+@define-color vnckpager_bg_color #98D437;
 
 /*******
  * OSD *
