--- a/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/BlackCAFE/gtk-3.0/cafe-applications.css
@@ -472,7 +472,7 @@ dictionary */
                       to (shade(@button_gradient_color_b, 0.7)));
 }
 
-/*Wncklist */
+/*Vncklist */
 .cafe-panel-menu-bar #tasklist-button {
     transition: all 400ms ease-out;
     padding: 2px;
@@ -519,7 +519,7 @@ dictionary */
                                       shade(@less_dark_color, 0.4));
 }
 
-/* set normal button WnckSelector */
+/* set normal button VnckSelector */
 .cafe-panel-menu-bar button menubar menuitem {
     border-radius: 3px;
     color: @theme_fg_color;
@@ -527,7 +527,7 @@ dictionary */
     background-image: none;
 }
 
-/* set selected button WnckSelector */
+/* set selected button VnckSelector */
 .cafe-panel-menu-bar button menubar menuitem:hover {
     color: @theme_fg_color;
     border-style: solid;
@@ -537,7 +537,7 @@ dictionary */
                                       shade(@button_gradient_color_a, 1.5));
 }
 
-/* set WnckSelector menuitem */
+/* set VnckSelector menuitem */
 .cafe-panel-menu-bar button menubar menuitem {
     background-image:  none;
     color: @theme_text_color;
@@ -546,7 +546,7 @@ dictionary */
     border-radius: 0px;
 }
 
-/* set WnckSelector selected menuitem */
+/* set VnckSelector selected menuitem */
 .cafe-panel-menu-bar button menubar menuitem:hover {
     border-image: none;
     color: @theme_fg_color;
@@ -591,7 +591,7 @@ CafePanelApplet > menubar {
 	padding-right: 4px;
 }
 
-/*WnckPager is unnamed in GTK inspector so try this*/
+/*VnckPager is unnamed in GTK inspector so try this*/
 PanelApplet.vnck-applet .vnck-pager {
     background-image: none;
     border-color: transparent;
@@ -599,14 +599,14 @@ PanelApplet.vnck-applet .vnck-pager {
     text-shadow: none;
 }
 
-/* selected WnckPager */
+/* selected VnckPager */
 PanelApplet.vnck-applet .vnck-pager:selected {
     background-image: linear-gradient(to bottom,
                                       @theme_selected_bg_color,
                                       shade (@theme_selected_bg_color, 0.36));
 }
 
-/* prelight of WnckPager */
+/* prelight of VnckPager */
 PanelApplet.vnck-applet .vnck-pager:hover {
     background-image: linear-gradient(to bottom,
                                       @theme_bg_color,
