--- a/desktop-themes/Mint/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/Mint/ctk-3.0/cafe-applications.css
@@ -505,7 +505,7 @@ window.background, /* selector where outlines are writen on CtkTrayIcon */
     padding: 0px 0px 0px 4px;
 }
 
-/* WnckPager */
+/* VnckPager */
 PanelApplet.vnck-applet .vnck-pager {
     color: shade (@theme_selected_bg_color, 1.05);
     background-image: none;
@@ -515,14 +515,14 @@ PanelApplet.vnck-applet .vnck-pager {
     outline-color: shade (@theme_selected_bg_color, 0.7);
 }
 
-/* selected WnckPager */
+/* selected VnckPager */
 PanelApplet.vnck-applet .vnck-pager:selected {
     background-image: linear-gradient(to bottom,
                                       @theme_selected_bg_color,
                                       shade (@theme_selected_bg_color, 0.36));
 }
 
-/* prelight of WnckPager */
+/* prelight of VnckPager */
 PanelApplet.vnck-applet .vnck-pager:hover {
     background-image: linear-gradient(to bottom,
                                       shade (@theme_selected_bg_color, 0.56),
