--- a/desktop-themes/ClassicOk/ctk-3.0/cafe-applications.css
+++ b/desktop-themes/ClassicOk/ctk-3.0/cafe-applications.css
@@ -670,3 +670,10 @@ window.background.maximized.baul-navigation-window notebook.baul-notebook scroll
     border-right-width: 0px;
 }
 
+/*******
+ * eoc *
+ *******/
+
+window.background.eoc-window > box > box > box > paned > grid > scrollbar {
+    border-width: 1px;
+}
